# broadworks_ocip

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  TODO.md  api.py.patch  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: _docs.yml  _full_tests.yml  _linting.yml  _test.yml  _upload.yml  deploy.yml  release.yml  tests.yml
api/api/: index.html
api/base/: index.html
api/exceptions/: index.html
api/responses/: index.html
api/types/: index.html
broadworks_ocip/: .gitignore  __init__.py  api.py  base.py  exceptions.py  requests.py  responses.py  types.py
changelog/: index.html
contributing/: index.html
css/: mkdocstrings.css
docs/: Makefile  broadworks_ocip.rst  conf.py  index.rst  installation.rst  internals.md  internals.rst  library.md  license.md  make.bat  modules.rst  todo.md  usage.md  usage.rst
docs/api/: api.md  base.md  exceptions.md  requests.md  responses.md  types.md
internals/: index.html
license/: index.html
ocip_schema/: OCISchemaAS.xsd  OCISchemaASDeprecatedSpecialExceptions.xsd  OCISchemaBASE.xsd  OCISchemaBaseDataTypes.xsd  OCISchemaDataTypes.xsd  OCISchemaDeprecated.xsd  OCISchemaDeprecated14.xsd  OCISchemaDeprecated15.xsd  OCISchemaDeprecated16.xsd  OCISchemaDeprecated17.xsd  OCISchemaDeprecated18.xsd  OCISchemaDeprecated19.xsd  OCISchemaDeprecated20.xsd  OCISchemaDeprecated22.xsd  OCISchemaDeprecated22AS.xsd  OCISchemaDeprecated24AS.xsd  OCISchemaDeprecatedAS.xsd  OCISchemaEnterprise.xsd  OCISchemaGroup.xsd  OCISchemaLogin.xsd  OCISchemaReseller.xsd  OCISchemaSearchCriteria.xsd  OCISchemaServiceProvider.xsd  OCISchemaSortCriteria.xsd  OCISchemaSystem.xsd  OCISchemaUser.xsd  XSOCI.xsd
ocip_schema/Services/: OCISchemaService3G4GContinuity.xsd  OCISchemaService5G.xsd  OCISchemaServiceAccountAuthorizationCodes.xsd  OCISchemaServiceAdviceOfCharge.xsd  OCISchemaServiceAlternateNumbers.xsd  OCISchemaServiceAnonymousCallRejection.xsd  OCISchemaServiceAttendantConsole.xsd  OCISchemaServiceAuthentication.xsd  OCISchemaServiceAutoAttendant.xsd  OCISchemaServiceAutomaticCallback.xsd  OCISchemaServiceAutomaticCollectCall.xsd  OCISchemaServiceAutomaticHoldRetrieve.xsd  OCISchemaServiceBargeInExempt.xsd  OCISchemaServiceBasicCallLogs.xsd  OCISchemaServiceBroadWorksAnywhere.xsd  OCISchemaServiceBroadWorksMobility.xsd  OCISchemaServiceBusyLampField.xsd  OCISchemaServiceCallCapacityManagement.xsd  OCISchemaServiceCallCenter.xsd  OCISchemaServiceCallCenterMonitoring.xsd  OCISchemaServiceCallForwardingAlways.xsd  OCISchemaServiceCallForwardingAlwaysSecondary.xsd  OCISchemaServiceCallForwardingBusy.xsd  OCISchemaServiceCallForwardingNoAnswer.xsd  OCISchemaServiceCallForwardingNotReachable.xsd  OCISchemaServiceCallForwardingSelective.xsd  OCISchemaServiceCallMeNow.xsd  OCISchemaServiceCallNotify.xsd  OCISchemaServiceCallPark.xsd  OCISchemaServiceCallPickup.xsd  OCISchemaServiceCallRecording.xsd  OCISchemaServiceCallReturn.xsd  OCISchemaServiceCallTransfer.xsd  OCISchemaServiceCallWaiting.xsd  OCISchemaServiceCallingLineIDBlockingOverride.xsd  OCISchemaServiceCallingLineIDDeliveryBlocking.xsd  OCISchemaServiceCallingNameDelivery.xsd  OCISchemaServiceCallingNameRetrieval.xsd  OCISchemaServiceCallingNumberDelivery.xsd  OCISchemaServiceCallingPartyCategory.xsd  (+93 more)
search/: search_index.json
tests/: __init__.py  fakeserver.py  test_basic_command_xml.py  test_broadworks_ocip.py  test_fake_server.py  test_faulty_command.py  test_xml_command_decode.py  test_xml_session_id.py
todo/: index.html
usage/: index.html
utilities/: deconstruct.py  process_schema.py  test_connection.py
