[tool.poetry]
name = "broadworks_ocip"
version = "1.0.0"
description = "API interface to the OCI-P provisioning interface of a Broadworks softswitch"
authors = ["Nigel Metheringham <nigelm@cpan.org>"]
license = "BSD"
readme = "README.rst"
homepage = "https://pypi.org/project/broadworks-ocip/"
repository = "https://github.com/nigelm/broadworks_ocip"
documentation = "https://broadworks-ocip.readthedocs.io/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "LICENSE",
    "README.rst",
    "tests/*",
    "docs/*"
]
exclude = [
    "**/__pycache__",
    "**/*.py[oc]"
]

[tool.poetry.dependencies]
python = ">=3.6"
classforge = "^0.92"
lxml = "^4.5.2"
attr = "^0.3.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
distlib = "^0.3.1"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-runner = "^5.2"
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
toposort = "^1.5"
tox = "^3.20.1"
xmlschema = "^1.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
