[tool.poetry]
name = "broadworks_ocip"
version = "1.4.0"
description = "API interface to the OCI-P provisioning interface of a Broadworks softswitch"
authors = ["Nigel Metheringham <nigelm@cpan.org>"]
license = "BSD"
readme = "README.md"
homepage = "https://pypi.org/project/broadworks-ocip/"
repository = "https://github.com/nigelm/broadworks_ocip"
documentation = "https://nigelm.github.io/broadworks_ocip/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "README.md",
    "tests/*",
    "docs/*"
]
exclude = [
    "**/__pycache__",
    "**/*.py[oc]"
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
classforge = "^0.92"
lxml = "^4.5.2"
attrs = "^20.2.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
distlib = "^0.3.1"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-runner = "^5.2"
toposort = "^1.5"
tox = "^3.20.1"
xmlschema = "^1.2.5"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.0"
mkdocstrings = "^0.13.6"
markdown-include = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
